# Towards_Standardized_WBM

./: .gitignore  CMakeLists.txt  README.md  build_all.sh
.github/workflows/: cmake.yml
models/: setup.py  simulation_helpers.hpp  simulation_interface.py  simulation_main.cpp  wilson_main.py
models/DissertationModels.egg-info/: PKG-INFO  SOURCES.txt
src/: API.cpp  CMakeLists.txt  setup.py.in  simulation_helpers.hpp
src/include/WilsonSimulation/: API.hpp
src/interface/: WilsonSimulation.i  numpy.i
tests/: CMakeLists.txt  helper_funcs.py  wilson_main.py
whole_brain_modelling/: helper_funcs.py  setup.py  simulation_helpers.hpp  simulation_interface.py  simulation_main.cpp  simulation_wilson.cpp  wilson_main.py
whole_brain_modelling_python/: wilson_sim.py
